# GenText-Forensics-Challenge-2026-solution-code

./: DTD_TRAIN.yaml  README.md  pyproject.toml
prompts/: all_in_one.txt  all_in_one_compact.txt  all_in_one_v2.txt  filterer.txt  only_dtd.txt  only_report.txt  prompt.txt  prompt_all_in_one_v3.txt  prompt_authentic_fewshot.txt  prompt_direct_v4.txt  prompt_strong_direct.txt  prompt_strong_dtd.txt  semantic_detective.txt  student_prompt_stage1.txt  teacher_prompt_235b.txt  teacher_prompt_235b_pristine.txt  teacher_prompt_235b_v2.txt  teacher_prompt_v2.txt  teacher_prompt_v3.txt
realtext_v2/: __init__.py  cli.py  dataset.py  download.py  grounding.py  metadata.py  metrics.py  report.py  splits.py  viz.py  vlm_format.py
scripts/cot/: augment_reports.py  distill_cot.py  prerender_prompts.py
scripts/dtd/: extract_dtd_ocr.py  extract_ocr.py  extract_regions.py
scripts/eval/: bertscore_patch.py  eval_dtd_on_val.py  eval_dtd_thresholds.py  eval_stage1.py  eval_stage1_on_val.py  evaluate_submission.py
scripts/inference/: infer_student.py  infer_student_sharded.py  paddle_ocr.py  paddle_ocr_subprocess.py  qwen3vl.py  run_combined.py  run_pipeline.py  run_two_stage_hf.py
scripts/training/: train_student.py
scripts/utils/: annotate_heatmaps.py  download_hf.py  prompt_stats.py  vis_report.py  viz_dtd_boxes.py
