[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtext_v2"
version = "0.1.0"
description = "Download, inspect, split and VLM-SFT-format the RealText-V2 multilingual document-forgery benchmark."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "GenText-Forensics contributor"}]
dependencies = [
    "huggingface_hub>=0.23",
    "pandas>=2.0",
    "pyarrow>=14",
    "Pillow>=10",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.scripts]
realtext-v2 = "realtext_v2.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["realtext_v2*"]
